<resources>
    <string name="app_name">LibrarIST</string>
    <string name="maps_api_key">"AIzaSyBSh4jYSrBpskY1-neF-hkzSb_AMeOF-y4"</string>
    <string name="search_address">Search Address…</string>
    <string name="books">Books</string>
    <string name="action_settings">Settings</string>
    <string name="insert_library_name">Insert Library Name…</string>
    <string name="insert_book_title">Insert Book Title…</string>
    <string name="check_in_book">Check in Book</string>
    <string name="check_out_book">Check out Book</string>
    <string name="library_name">Library Name</string>
    <string name="available_books">Available books</string>
    <string name="find_in_map">Find in map!</string>
    <string name="go_to_location">Go to Location</string>
    <string name="back">BACK</string>
    <string name="default_book">default Book</string>
    <string name="create_library">CREATE</string>
    <string name="see_more">See more</string>
    <string name="book_notif_disabled">Notify when available</string>
    <string name="book_notif_enabled">Don\'t notify</string>
    <string name="notify_when_available">Notify when available</string>
    <string name="camera">camera</string>
    <string name="book_title">Book title</string>
    <string name="book_available_in_following_libraries">Available in the following libraries:</string>
    <string name="default_library_name">Library default</string>
    <string name="default_library_distance">0.0Km</string>
    <string name="books_currently_available">Books currently available:</string>
    <string name="library_address">Library Address</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="sorted_by_rating">Sorted by: Rating</string>
    <string name="book_rates">Book rates</string>
    <string name="rate_book_btn">Rate</string>

    <string name="couldnt_connect_server">Couldn\'t connect to the server</string>
    <string name="user_does_not_exist">User does not exist</string>
    <string name="couldnt_create_guest_user">Couldn\'t create Guest user!</string>
    <string name="couldnt_login">Couldn\'t login!</string>
    <string name="couldnt_register_user">Couldn\'t register the user!</string>
    <string name="user_already_exists">User already exists!</string>
    <string name="error_creating_user">Error creating user</string>
    <string name="couldnt_verify_user">Couldn\'t verify user!</string>
    <string name="turn_on_location">Please turn on your Location…</string>
    <string name="turn_on_internet">Please, turn on the Internet…</string>
    <string name="loaded_libraries_markers">Loaded libraries markers!</string>
    <string name="couldnt_load_libraries">Couldn\'t load libraries</string>
    <string name="fill_all_details">Please fill all details</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="insert_valid_library_name">Please insert a valid Library Name..</string>
    <string name="insert_upload_library_photo">Please upload a Library Photo…</string>
    <string name="error_ocurred">An error occurred, please try again!</string>
    <string name="insert_address">Please insert an address</string>
    <string name="insert_valid_address">Please insert a valid address</string>
    <string name="centered_in">Centered in </string>
    <string name="couldnt_create_library">Couldn\'t crate the library!</string>
    <string name="error_reporting_book">Error reporting book</string>
    <string name="couldnt_rate_book">Couldn\'t rate this book!</string>
    <string name="book_rated">Book rated!</string>
    <string name="couldnt_get_book">Couldn\'t get book!</string>
    <string name="couldnt_get_books">Couldn\'t get books!</string>
    <string name="couldnt_filter_books">Couldn\'t filter books!</string>
    <string name="couldnt_get_libraries">Couldn\'t get libraries!</string>
    <string name="got_all_books">Got all books!</string>
    <string name="valid_book_title">Please insert a valid Book Title…</string>
    <string name="upload_book_cover">Please upload a photo of the Book cover…</string>
    <string name="error_processing_photo">There was an error processing your photo!</string>
    <string name="error_processing">There was an error processing your request</string>
    <string name="couldnt_get_library">Couldn\'t get this library!</string>
    <string name="couldnt_find_book">Couldn\'t find book!</string>
    <string name="couldnt_check_in_book">Couldn\'t check in book!</string>
    <string name="book_check_in">Book checked in!</string>
    <string name="new_book_check_in">New Book checked in!</string>
    <string name="couldnt_check_in_new_book">Couldn\'t check in new book!!</string>
    <string name="couldnt_check_out_book">Couldn\'t check out book!</string>
    <string name="book_check_out">Book checked out!</string>
    <string name="book_not_from_library">Book is not from this library!</string>
    <string name="couldnt_add_favorite_lib">Couldn\'t add library to favorites!</string>
    <string name="library_added_favorites">Library added to favorites!</string>
    <string name="couldnt_rem_favorite_lib">Couldn\'t remove library from favorites!</string>
    <string name="library_rem_favorites">Library removed from favorites!</string>
    <string name="notifications_activated">Notifications on for LibrarIST</string>
    <string name="new_book_available">New book available</string>
    <string name="book">Book </string>
    <string name="is_now_available_at"> is now available at </string>
    <string name="rate">Rate</string>
    <string name="cancel">Cancel</string>

</resources>