<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/back_btn"
            android:src="@drawable/return_arrow"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/book_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="2dp"
            android:gravity="center_horizontal"
            android:text="@string/books"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/div_search_book"
        android:layout_below="@id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/book_title_input"
            android:layout_width="335dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:hint="@string/insert_book_title"
            android:inputType="text"
            android:autofillHints="" />

        <ImageButton
            android:id="@+id/search_book_btn"
            android:src="@drawable/search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:background="@null"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/div_books_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/div_search_book"
        android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>