<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/back_btn"
            android:src="@drawable/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/book_info_title"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/back_btn"
            android:gravity="center"
            android:text="@string/book_title"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/book_report"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/report"
            android:layout_marginTop="18dp"
            android:layout_marginStart="12dp"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@id/book_info_title"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/book_info_cover_img"
        android:layout_below="@id/top_bar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/book_cover"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/div_book_info_notif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/book_info_cover_img"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        android:layout_marginStart="10dp"
        android:gravity="start" >

        <ImageButton
            android:id="@+id/book_info_notif_btn"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/bell_notif_off" />

        <TextView
            android:id="@+id/book_info_notif_message"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/notify_when_available"
            android:layout_gravity="center_vertical"
            android:textSize="18sp" />

        <Button
            android:id="@+id/rate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rate"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/div_rating_chart"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/div_book_info_notif"
        android:layout_margin="10dp"
        tools:ignore="MissingClass">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/book_info_rate_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/list_libraries_prompt"
        android:layout_below="@+id/div_rating_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_available_in_following_libraries"
        android:textSize="15sp"
        android:layout_marginStart="12dp"/>

    <ScrollView
        android:id="@+id/available_libraries_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_libraries_prompt"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:id="@+id/available_libraries_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>

</RelativeLayout>