<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/back_btn"
            android:background="@drawable/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/library_name_title"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/back_btn"
            android:gravity="center"
            android:text="@string/library_name"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />

        <!-- ADD/REMOVE FROM FAVORITES -->
        <androidx.cardview.widget.CardView
            android:id="@+id/library_add_remove_favorites_btn"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="2dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            android:layout_toEndOf="@+id/library_name_title"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/favorite_library"
                    android:tag="unselected"
                    android:layout_gravity="center"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/star_unselected" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <!--        MAP         -->
    <RelativeLayout
        android:id="@+id/library_map"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_below="@+id/top_bar"
        android:layout_marginTop="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center" >

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/library_image_and_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/library_map"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/library_photo"
                android:layout_width="170dp"
                android:layout_height="180dp"
                android:src="@drawable/library_photo_default"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:id="@+id/library_check_in_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="40dp">

                <!-- CHECK IN BOOK -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/library_check_in_book_btn"
                    android:layout_width="130dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="45dp"
                            android:src="@drawable/barcode" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/check_in_book"
                            android:textSize="14sp"
                            android:textAlignment="center" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- CHECK OUT BOOK -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/library_check_out_book_btn"
                    android:layout_width="130dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="45dp"
                            android:src="@drawable/barcode" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/check_out_book"
                            android:textSize="14sp"
                            android:textAlignment="center" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/list_books_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/library_image_and_buttons"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/books_currently_available"
        android:textSize="15sp" />

    <ScrollView
        android:id="@+id/available_libraries_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_books_prompt"
        android:layout_margin="5dp">

        <LinearLayout
            android:id="@+id/available_books_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>

</RelativeLayout>