<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="@android:dimen/app_icon_size"
            android:textStyle="bold" />

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/librarist_logo_round" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/address_input"
                android:layout_width="335dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:text=""
                android:hint="@string/search_address"
                android:inputType="text"
                tools:ignore="LabelFor"
                android:autofillHints="" />

            <ImageButton
                android:id="@+id/search_address_btn"
                android:src="@drawable/search"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:background="@null"
                android:padding="5dp"/>
        </LinearLayout>

<!--        MAP         -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center" >

            <fragment
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:name="com.google.android.gms.maps.SupportMapFragment" />

        </RelativeLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/books_btn"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/almost_white"
            app:cardCornerRadius="18dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="10dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/favorite_library"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/books" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/books"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>